@@ -1,3 +1,11 @@
+2005-08-20  Jb Evain  <jbevain@gmail.com>
+
+	* CodeGen/templates/Utilities.cs
+	  Mono.Cecil.Metadata/Utilities.cs:
+		Return a null token if the rid of a md token
+		is 0. Fix the crash when Mono try to read 
+		assemblies emitted by Cecil.
+
 2005-08-19  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil.Implem/ReflectionWriter.cs:
